@@ -192,6 +192,8 @@ See also the [Groups Documentation](http://docs.itthinx.com/document/groups/) pa
 = 2.3.1 =
 * Fixed several points where warnings related to the use of count() and the Countable interface would occur due to changes in PHP 7.2.
 * Tested with WordPress 4.9.
+* Added the groups_post_access_posts_where_query_get_post_types filter to allow additional processing to cover for cases like where
+  wc_query is set.
 
 = 2.3.0 =
 * Tested with WordPress 4.8.
